# openamp_core

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Openamp-config.cmake  README.md  build.sh
openamp/: Openamp-config.cmake  README.md  build.sh
openamp/libhugetlbfs/: sys-elf_loong64.S
openamp/libmetal/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
openamp/libmetal/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp/libmetal/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp/libmetal/lib/compiler/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp/libmetal/lib/processor/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp/libmetal/lib/system/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp/open-amp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
openamp/open-amp/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp/open-amp/lib/proxy/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp/open-amp/lib/remoteproc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp/open-amp/lib/rpmsg/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp/open-amp/lib/utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp/open-amp/lib/virtio/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openamp_demo/: openamp_app.c  openamp_app.h  openamp_app_echo.c
operation_interface/: operation_interface.c  operation_interface.h
scripts/: tftp.md  tftp.sh
(+20 files in other folders)
